src/metrics/snapshots/big_code_analysis__metrics__npa__tests__mozjs_class_fields_count.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 3.0,
  "interfaces": 0.0,
  "class_attributes": 3.0,
  "interface_attributes": 0.0,
  "classes_average": 1.0,
  "interfaces_average": null,
  "total": 3.0,
  "total_attributes": 3.0,
  "average": 1.0
}
