src/metrics/snapshots/big_code_analysis__metrics__npa__tests__php_anonymous_class_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 1.0,
  "interfaces": 0.0,
  "class_attributes": 2.0,
  "interface_attributes": 0.0,
  "classes_average": 0.5,
  "interfaces_average": null,
  "total": 1.0,
  "total_attributes": 2.0,
  "average": 0.5
}
