src/metrics/snapshots/big_code_analysis__metrics__npa__tests__php_mixed_visibility_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 2,
  "interfaces": 0,
  "class_attributes": 4,
  "interface_attributes": 0,
  "class_cda": 0.5,
  "interface_cda": 0.0,
  "total": 2,
  "total_attributes": 4,
  "cda": 0.5
}
