src/metrics/snapshots/big_code_analysis__metrics__npa__tests__php_one_protected_attribute.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 0,
  "interface_npa_sum": 0,
  "class_attributes": 1,
  "interface_attributes": 0,
  "class_cda": 0.0,
  "interface_cda": 0.0,
  "total": 0,
  "total_attributes": 1,
  "cda": 0.0
}
