src/metrics/snapshots/big_code_analysis__metrics__npa__tests__python_bare_type_annotation_not_attribute.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 1.0,
  "interfaces": 0.0,
  "class_attributes": 1.0,
  "interface_attributes": 0.0,
  "classes_average": 1.0,
  "interfaces_average": 0.0,
  "total": 1.0,
  "total_attributes": 1.0,
  "average": 1.0
}
